--- a/gms.common/gms.common.csproj
+++ b/gms.common/gms.common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -7,12 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.11" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<Folder Include="Enums\" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Enums\" />
+		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.11" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.3.3" />
 	</ItemGroup>
 
 </Project>
