--- a/gms.common/gms.common.csproj
+++ b/gms.common/gms.common.csproj
@@ -11,9 +11,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.*" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.*" />
-		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.11" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.3.3" />
 	</ItemGroup>
 
 </Project>
