--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "TenantSettings": {
+    "Defaults": {
+      "DBProvider": "mssql",
+      "ConnectionString": "Data Source=System-----W10;Initial Catalog=DefaultTenant;Integrated Security=True;Encrypt=False"
+    },
+    "Tenants": [
+      {
+        "TenantId": "423cb483-2da3-4970-abaa-394f417b0ec0",
+        "Name": "Tenant1",
+        "ConnectionString": "Data Source=System-----W10;Initial Catalog=gms;Integrated Security=True;Encrypt=False"
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
