--- a/gms.web/gms.web.csproj
+++ b/gms.web/gms.web.csproj
@@ -10,7 +10,9 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\gms.shared\gms.shared.csproj" />
+	  <ProjectReference Include="..\gms.Application.Contracts\gms.Application.Contracts.csproj" />
+	  <ProjectReference Include="..\gms.Application\gms.Application.csproj" />
+	  <ProjectReference Include="..\gms.entityframeworkcore\gms.entityframeworkcore.csproj" />
 	</ItemGroup>
 
 </Project>
