--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -2,7 +2,7 @@
   "TenantSettings": {
     "Defaults": {
       "DBProvider": "mssql",
-      "ConnectionString": "Data Source=System-----W10;Initial Catalog=DefaultTenant;Integrated Security=True;Encrypt=False"
+      "ConnectionString": "Data Source=System-----W10;Initial Catalog=gms;Integrated Security=True;Encrypt=False"
     },
     "Tenants": [
       {
