Add initalMigration and Update database

--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=System-----W10;Initial Catalog=GMS;Integrated Security=True;Encrypt=False"
+  },
   "TenantSettings": {
     "Defaults": {
-      "DBProvider": "mssql",
+      "DBProvider": "sql",
       "ConnectionString": "Data Source=System-----W10;Initial Catalog=gms;Integrated Security=True;Encrypt=False"
     },
     "Tenants": [
