--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=System-----W10;Initial Catalog=GMS;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Data Source=.;Initial Catalog=GMS;Integrated Security=True;Encrypt=False"
   },
   "TenantSettings": {
     "Defaults": {
