--- a/gms.service/gms.service.csproj
+++ b/gms.service/gms.service.csproj
@@ -7,17 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="BaseRepository\**" />
-      <EmbeddedResource Remove="BaseRepository\**" />
-      <None Remove="BaseRepository\**" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.*" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\gms.common\gms.common.csproj" />
+      <ProjectReference Include="..\gms.data\gms.data.csproj" />
     </ItemGroup>
 </Project>
