--- a/gms.common/gms.common.csproj
+++ b/gms.common/gms.common.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="8.0.3" />
