--- a/gms.service/gms.service.csproj
+++ b/gms.service/gms.service.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="11.*" />
+        <PackageReference Include="FluentResults" Version="3.15.2" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     </ItemGroup>
 
