--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=gms.web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False",
+    "ApplicationIdentityDbContextConnection": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False"
   }
 }
