--- a/gms.common/gms.common.csproj
+++ b/gms.common/gms.common.csproj
@@ -7,14 +7,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\Branch\**" />
+	  <EmbeddedResource Remove="Models\Branch\**" />
+	  <None Remove="Models\Branch\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="8.0.3" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Models\Branch\" />
 	</ItemGroup>
 
 </Project>
