--- a/gms.data/gms.data.csproj
+++ b/gms.data/gms.data.csproj
@@ -27,5 +27,13 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Mapper\Branch\" />
+	  <Folder Include="Mapper\Class\" />
+	  <Folder Include="Mapper\Event\" />
+	  <Folder Include="Mapper\Member\" />
+	  <Folder Include="Mapper\Membership\" />
+	  <Folder Include="Mapper\Workout\" />
+	  <Folder Include="Mapper\Subscription\" />
+	  <Folder Include="Mapper\Staff\" />
+	  <Folder Include="Mapper\Nutrition\" />
 	</ItemGroup>
 </Project>
