--- a/gms.service/gms.service.csproj
+++ b/gms.service/gms.service.csproj
@@ -19,5 +19,6 @@
 
     <ItemGroup>
       <Folder Include="Gym\GymStaffSpecializationRepository\" />
+      <Folder Include="NewFolder\" />
     </ItemGroup>
 </Project>
