--- a/gms.web/gms.web.csproj
+++ b/gms.web/gms.web.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Validations\" />
     <Folder Include="Views\Workout\" />
     <Folder Include="Views\Subscription\" />
     <Folder Include="Views\Staff\" />
