--- a/gms.common/gms.common.csproj
+++ b/gms.common/gms.common.csproj
@@ -19,4 +19,8 @@
 		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="8.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Models\MembershipCat\MembershipPaymentHistory\" />
+	</ItemGroup>
+
 </Project>
