--- a/gms.web/appsettings.Development.json
+++ b/gms.web/appsettings.Development.json
@@ -9,7 +9,7 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -27,6 +27,12 @@
           "path": "Logs/log-.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+
         }
       }
     ],
