--- a/gms.web/gms.web.csproj
+++ b/gms.web/gms.web.csproj
@@ -14,6 +14,9 @@
   <ItemGroup>
 	<PackageReference Include="Autofac" Version="8.0.0" />
 	<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+	<PackageReference Include="Hangfire" Version="1.8.12" />
+	<PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
+	<PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
