--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -5,6 +5,39 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "YourAppName"
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContextConnection": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False",
