--- a/gms.web/appsettings.json
+++ b/gms.web/appsettings.json
@@ -42,6 +42,6 @@
   "ConnectionStrings": {
     "ApplicationDbContextConnection": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False",
     "ApplicationIdentityDbContextConnection": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False",
-    "HangFire": "Data Source=.;Initial Catalog=GMSHangFire;Integrated Security=True;Encrypt=False"
+    "HangFire": "Data Source=.;Initial Catalog=GMSDevelopment;Integrated Security=True;Encrypt=False"
   }
 }
