--- a/gms.service/gms.service.csproj
+++ b/gms.service/gms.service.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="FluentResults" Version="3.15.2" />
         <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.4" />
     </ItemGroup>
 
     <ItemGroup>
